fix: reinstate stage status email notifications
This was accidentally removed in GoCD 24.5.0 when cleaning up pieces of caching and notification infrastructure which seemed unused. This reinstates it with a simpler approach; replacing use of two queue chains with a single one.